--- a/index.html
+++ b/index.html
@@ -25,7 +25,59 @@
     <main>
         <h1>Come creare un templete per i post</h1>
         <p >di Mario Rossi-pubblicato il 25-10-2022</p>
-        <i>class=</i>
+        <p>la prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni
+            da apliccare a tutte le pagine
+        </p>
+        <p>le varie arie saranno quindi suddivise in:</p>
+        <ul>
+            <li>Contenuti di intestazione del tag ICONAHEADER</li>
+            <li>Contenuti centrali variabili del tag ICONAMAIN</li>
+            <li>Contenuti di fine pagina comuni da inserire nel tag ICONAFOOTER</li>
+        </ul>
+        <p>Formattazione del codice il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i css
+            Perciò i passi saranno:</p>
+            <ol>
+                <li>Progettare su carta il markup finale , assegnando ad ogni specifico testo il tag appropriato</li>
+                <li>Scrivere l'html dei tag esterni a quelli interni e dall' alto verso il basso</li>
+                <li>Applicare gli stili CSS</li>
+            </ol>
+        <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale</p>
+        <table>
+            <tr>
+                <th>Anno</th>
+                <th>% di utilizzo</th>
+                <th>Supporto Browser</th>
+              </tr>
+            <tr>
+                <th>2000</th>
+                <th>20%</th>
+                <th>17%</th>
+            </tr>
+            <tr>
+                <th>2002</th>
+                <th>35%</th>
+                <th>22%</th>
+            </tr>
+            <tr>
+                <th>2004</th>
+                <th>45%</th>
+                <th>42%</th>
+            </tr>
+            <tr>
+                <th>2008</th>
+                <th>80%</th>
+                <th>51%</th>
+            </tr>
+            <tr>
+                <th>2012</th>
+                <th>100%</th>
+                <th>76%</th>
+            </tr>
+        </table>
+<p>Un test di validazione potrà essere fatto tramite il tool online dedicato
+    allo scopo.Una volta ottimizzato il tutto, avremo raggiunto il nostro obbiettivo
+    ad essere stati dei veri developers come loro
+</p>
     </main>
 </body>
 
